fix uneven and center top

--- a/source/css/moodStyle.css
+++ b/source/css/moodStyle.css
@@ -15,6 +15,9 @@
     display: inline-block;
     transition: all .15s ease-in;
     cursor: pointer;
+    margin-right: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 #moods li:hover {
@@ -34,11 +37,7 @@
     font-family: Mulish;
     text-align: center;
 }
-.top{
-    display:flex;
-    padding-top:50px;
-    margin-left:50px;
-}
+
 
 #moodh3{
     font-family: Mulish;
